# Explore_GenAI

./: .gitignore  chat.py  goq_crewai.ipynb  history_based_chat.py  mistral.ipynb  pyproject.toml  wine-ratings.csv
rags/: acs.ipynb
